# server/internal/app/apiserver/dto/auth.go
@@ -1,18 +1,24 @@
 package dto
 
-import "github.com/google/uuid"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type UserDetails struct {
-	ID    uuid.UUID `json:"id"`
-	Name  string    `json:"name"`
-	Email string    `json:"email"`
-	Bio   string    `json:"bio"`
+	ID       uuid.UUID `json:"id" validate:"required"`
+	Name     string    `json:"name" validate:"required"`
+	Online   bool      `json:"online" validate:"required"`
+	LastSeen time.Time `json:"last_seen" validate:"required"`
+	Email    string    `json:"email" validate:"required"`
+	Bio      string    `json:"bio"`
 }
 
 type LoginRequest struct {
 	Email      string `json:"email" validate:"required,email"`
 	Password   string `json:"password" validate:"required"`
-	RememberMe bool   `json:"remember_me"`
+	RememberMe bool   `json:"remember_me" validate:"required"`
 }
 
 type LoginResponse struct {
@@ -20,8 +26,8 @@ type LoginResponse struct {
 }
 
 type LogoutResponse struct {
-	Success     bool   `json:"success"`
-	RedirectUrl string `json:"redirect_url"`
+	Success     bool   `json:"success" validate:"required"`
+	RedirectUrl string `json:"redirect_url" validate:"required"`
 }
 
 type RegistrationRequest struct {
